@@ -146,7 +146,7 @@ public final class TimeUnitFormat {
         long hundredNano = 0l;
         for (int i=7; i>=0; i--) {
             hundredNano <<= 8;
-            byte winByte = Integer.valueOf(bytes[i]).byteValue();
+            byte winByte = new Integer(bytes[i]).byteValue();
             hundredNano += 0xff & winByte;
         }
         return Math.abs(hundredNano/10000);
